app/assets/stylesheets/maps.css.scss
// Place all the styles related to the maps controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
  background: #141414 !important;
  font-family: 'Lato', sans-serif !important;
}

@media (min-width: 1200px) {
  .container {
  width: 1400px;
  }
}

#logo {
  width: 90%;
  height: auto;
  padding-top: 25px;
  padding-bottom: 30px;
}

#map { 
  width: 65%;
  position: absolute;
  bottom: 0;
  top: 0;
  left: 35%;
  z-index: 0;
}

.years, .weeks {
  padding: 0 10px 30px 0px;
}

#year-slider, #week-slider {
  width: auto;
}

#year-number, #week-number {
  border: 0; 
  /*color: #FF3399; */
  color: #B31998;
  font-weight: bold;
  width: 100px;
}

#week-number, #year-number {
  font-family: 'Lato Thin', sans-serif;
  font-weight: 100;
  font-size: 20px;
  color: #FFFFFF;
}

#week-label, #year-label {
  font-family: 'Lato Ultra Bold', sans-serif;
  font-weight: 900;
  font-size: 20px;
  text-transform: uppercase;
  color: #C3F73A;
}

label {
  border: 0;
}

.slider-label {
}

.ui-slider .ui-slider-handle {
  color: #e8e0d8;
}

.countries {
  color: #e8e0d8;
  margin: 20px 0 0 0;
}

.country-container {
  position: relative;
  margin: 0px -15px 0px -15px;
  cursor: pointer;
}

.country-name {
  text-transform: uppercase;
  font-family: "Lato Bold",sans-serif;
  font-weight: 900;
  font-size: 18px;
  color: white;
}

.song {
  font-family: "Lato Bold",sans-serif;
  font-weight: 700;
  font-size: 16px;
  color: white;
}

.artist {
  font-family: "Lato Thin",sans-serif;
  font-weight: 100;
  font-size: 14px;
  color: white;
}

.chart {
  display: block;
  color: #fff;
  font-size: 12px;
  text-align: right;
}

.country-info {
  padding: 10px 10px 2px 10px;
  background: #FF82EE;
  border-top: 1px solid white;
  border-bottom: 1px solid white;
}

.play-overlay {
  position: absolute;
  background: rgba(201,201,201, .50);
  width: 100%;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  display: inline-block;
  // transform: translate(0%, -318%);
  // transform: scale(2.0);
}

.play-overlay span {
  position: relative;
  left: 40%;
  display: inline;
  line-height: 80px;
  vertical-align: middle;
  font-size: 60px;
}

.sidebar {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 35%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  background: #141414;
  border-right: 8px ridge #42F2F7;
  box-shadow: -1px 0 2px rgba(0,0,0,0.05);
}

.navbar-default {
  background-color: #141414;
  border-color: #141414;
}

.random {
  width: 100%;
  text-align: center;
  padding-bottom: 20px;
}

#random-date {
  background-color: #141414;
  border: 1px solid #FFF;
  width: 200px;
  height: 40px;
  font-family: "Lato Ultra Bold", sans-serif;
  font-size: 15px;
  color: #FFF;
  font-weight: 900;
  text-transform: uppercase;
}

#random-date:focus {
  outline: none;
}

.creds {
  text-align: center;
  color: white;
  margin: 30px 0 0 0;
  font-family: 'Lato Light', sans-serif;
  font-weight: 300;
  font-size: 12px;
}

.creds a{
  color: #C3F73A;
}

